# omnilog-rs

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  logger.rs  loggers.rs  loglevel.rs  logrecord.rs  processor.rs
src/loggers/: consolelogger.rs  defaultlogger.rs  mod.rs  sysloglogger.rs
